# publish_group_task

./: .gitignore  Dockerfile  Makefile  README.md  default.env  docker-compose.yml  dump.sql  pyproject.toml
src/: pytest.ini
src/account/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
src/account/migrations/: 0001_initial.py
src/account/templates/: base.html  index.html
src/account/templates/account/: login.html  register.html
src/app/: urls.py
src/app/conf/: apps.py  core.py
src/data_aggregator/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
src/data_aggregator/migrations/: 0001_initial.py  0002_file_file_name.py
src/data_aggregator/templates/data_aggregator/: summary.html  upload.html
