[tool.poetry]
name = "publish-group-task"
version = "0.1.0"
description = ""
authors = ["Artem Svistelnik <artem.svistelnik@gmail.com>"]
readme = "README.md"
packages = [{include = "publish_group_task"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
black = "^24.10.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
