[tool.poetry]
name = "publish-group-task"
version = "0.1.0"
description = ""
authors = ["Artem Svistelnik <artem.svistelnik@gmail.com>"]
readme = "README.md"
packages = [{include = "publish_group_task"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
black = "^24.10.0"
psycopg2-binary = "^2.9.10"
django-crispy-forms = "^2.3"
crispy-bootstrap5 = "^2024.10"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pytest = "^8.3.3"
pytest-django = "^4.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
